--- a/QRCode Generator/QRCode Generator.csproj
+++ b/QRCode Generator/QRCode Generator.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>QRCode_Generator</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    <PackageReference Include="ZXing.Net" Version="0.16.5" />
+  </ItemGroup>
+
 </Project>
